# kubernetes-django

./: Dockerfile  app-argo.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yaml
k8s/: configmap.yaml  deployment-django.yaml  deployment-postgres.yaml  secret.yaml
k8s-helm/templates/: deployment-django.yaml  ingress.yaml  service-django.yaml  service-postgres.yaml
k8s-helm/templates/tests/: test-connection.yaml
web/: .env  README.md  manage.py
web/myapp/: urls.py  views.py
web/web/: settings.py  urls.py
